--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "entity.ts"],
   "exclude": [
     "dist",
     "node_modules",
