--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@fastify/static": "^8.1.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-fastify": "^11.1.1",
     "@nestjs/swagger": "^11.1.5",
     "@nestjs/typeorm": "^11.0.0",
     "@prisma/client": "^6.6.0",
@@ -37,6 +39,7 @@
     "class-validator": "^0.14.1",
     "dotenv": "^16.5.0",
     "express-rate-limit": "^7.5.0",
+    "fastify": "^5.3.3",
     "helmet": "^8.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
