--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "engines": {
-	  "node": ">=20.0.0"
+    "node": ">=20.0.0"
   },
   "scripts": {
     "build": "nest build",
@@ -25,6 +25,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
+    "@fastify/helmet": "^13.0.1",
+    "@fastify/rate-limit": "^10.3.0",
     "@fastify/static": "^8.1.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
