feat: add cookie-parser for cookie handling and implement user retrieval in authentication

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "types": ["node"],
+    "typeRoots": ["./node_modules/@types", "./src/@types"],
 
     "strict": true,
     "skipLibCheck": true,
