--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.22",
     "uuid": "^11.1.0",
-    "husky": "^9.1.7",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -91,6 +90,6 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "husky": "^9.1.7"
   }
 }
