--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": ">=20.0.0"
   },
   "scripts": {
-    "build": "nest build",
+    "build": "rimraf dist && nest build",
     "start": "nest build && nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -21,8 +21,7 @@
     "test:e2e": "jest --config jest-e2e.json",
     "test:file": "jest --bail --findRelatedTests",
     "lint": "biome check .",
-    "format": "biome format .",
-    "prepare": "husky"
+    "format": "biome format ."
   },
   "dependencies": {
     "@fastify/cors": "^11.0.1",
@@ -53,6 +52,7 @@
     "pg": "^8.15.5",
     "prisma": "^6.6.0",
     "reflect-metadata": "^0.2.2",
+    "rimraf": "^6.0.1",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.22",
     "uuid": "^11.1.0",
@@ -80,6 +80,7 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^15.5.1",
     "prettier": "^3.4.2",
@@ -89,7 +90,6 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3",
-    "husky": "^9.1.7"
+    "typescript": "^5.7.3"
   }
 }
