--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "format": "biome format ."
   },
   "dependencies": {
-    "@nestjs/cli": "^11.0.0",
     "@fastify/cors": "^11.0.1",
     "@fastify/helmet": "^13.0.1",
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/static": "^8.1.1",
+    "@nestjs/cli": "^11.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -44,6 +44,7 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "fastify": "^5.3.3",
     "helmet": "^8.1.0",
